# vice

./: .all-contributorsrc  .editorconfig  .gitignore  .gitlab-ci.yml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  README.md  bu.mk  elvis  elvis.config  erlang.mk  jorel  jorel.config  jorel.config.sample  mix.exs  overview.edoc  plugins.mk  rebar.config  rebar3  tag  xrel  xrel.config
c_src/: CMakeLists.txt  Makefile.build  evic_facedetect.c  facedetect.cpp  facedetect.h  main.c  vice_facedetect.c
c_src/cmake/: FindErlang.cmake
config/: evic.config  jorel.config  vice.config  vm.args
doc/: README.md  edoc-info  evic.md  jorel.md  jorel_log.md  vice.md  vice_encoder.md  vice_srt.md  vice_subtitles.md  vice_thumbnails.md  vice_webvtt.md
dockerfiles/alpine-build/: Dockerfile  README.md
dockerfiles/alpine-release/: Dockerfile
include/: evic.hrl  jorel.hrl  vice.hrl  vice_ffmpeg.hrl  vice_sox.hrl  xrel.hrl
lib/: Evic.ex  Vice.Srt.ex  Vice.Subtitles.ex  Vice.Thumbnails.ex  Vice.Webvtt.ex  Vice.ex
priv/presets/: hls1080p.preset  hls360p.preset  hls720p.preset  html5mp4.preset  html5ogg.preset  html5webm.preset
priv/presets/video/: generic-audio.preset  generic-video.preset  hls1080p-standard.preset  hls1080p.preset  hls360p-standard.preset  hls360p.preset  hls480p-standard.preset  hls480p.preset  hls576p-standard.preset  hls576p.preset  hls720p-standard.preset  hls720p.preset  html5mp4.preset  html5ogg.preset  html5webm.preset
priv/templates/: boot.dtl  deb_debian_changelog.dtl  deb_debian_control.dtl  deb_debian_copyright.dtl  deb_debian_init.dtl  deb_debian_postinst.dtl  deb_debian_postrm.dtl  extrel.dtl  jorel_deb_debian_control.dtl  jorel_deb_debian_postinst.dtl  jorel_deb_debian_rules.dtl  jorel_elixir_config.dtl  jorel_unix_script.dtl  jorel_unix_start.dtl  jorel_vm_args.dtl  rel.dtl  run.dtl  sys_config.dtl  vm_args.dtl
src/: evic.app.src  evic.erl  evic_app.erl  evic_facedetect.erl  evic_prv_encoder.erl  evic_prv_ffmpeg.erl  evic_prv_ffmpeg_options.erl  evic_prv_imagemagick.erl  evic_sup.erl  evic_utils.erl  jorel.app.src  jorel.erl  jorel_cmd.erl  jorel_config.erl  jorel_elixir.erl  jorel_erlang_mk.erl  jorel_escript.erl  jorel_log.erl  jorel_provider.erl  jorel_provider_appup.erl  jorel_provider_archive.erl  jorel_provider_artifactory.erl  jorel_provider_config.erl  jorel_provider_deb.erl  jorel_provider_dockerize.erl  jorel_provider_git_tag.erl  jorel_provider_install.erl  jorel_provider_providers.erl  jorel_provider_publish.erl  jorel_provider_register.erl  jorel_provider_release.erl  jorel_provider_relup.erl  jorel_provider_rpm.erl  jorel_provider_tar.erl  jorel_provider_zip.erl  jorel_release.erl  jorel_tempdir.erl  vice.app.src  vice.erl  vice_app.erl  (+35 more)
templates/: deb_debian_install.dtl  nodetool.dtl  rpm_init_script.dtl  rpm_spec.dtl  run.dtl  sys_config.dtl  upgrade_escript.dtl  vm_args.dtl
test/: jorel-1.config  jorel_config_tests.erl  jorel_release_app_elixir_tests.erl  jorel_release_app_tests.erl  vice_prv_ffmpeg_tests.erl  vice_prv_options_tests.erl  vice_prv_sox_tests.erl  vice_prv_status_tests.erl  vice_prv_subs_tests.erl  vice_subtitles_tests.erl  vice_thumbnails_tests.erl  vice_utils_tests.erl
test/test_apps/jorel_sample/: Makefile  README.md
test/test_apps/jorel_sample/src/: jorel_sample_sup.erl
test/thumbnails/: README.md  index.html  subtitles.vtt  videojs.thumbnails.css  videojs.thumbnails.js
test_apps/0.0.1/elixir_test/: README.md  mix.exs
test_apps/0.0.1/elixir_test/config/: config.exs
test_apps/0.0.1/elixir_test/lib/: elixir_test.ex
test_apps/0.0.1/elixir_test/test/: elixir_test_test.exs
test_apps/0.0.1/jorel_sample/: .gitignore
test_apps/0.0.1/jorel_sample/src/: jorel_sample.erl  jorel_sample_app.erl
test_apps/0.0.2/jorel_sample/: Makefile  jorel.config
test_apps/0.0.2/jorel_sample/src/: jorel_sample.appup.src  jorel_sample.erl
test_apps/dockers_cowboy/: Makefile  README.md  jorel.config
test_apps/dockers_cowboy/src/: dockers_cowboy_app.erl  dockers_cowboy_sup.erl  toppage_handler.erl
test_apps/dockers_phoenix/: .gitignore  Makefile  README.md  jorel.config  mix.exs
test_apps/dockers_phoenix/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
test_apps/dockers_phoenix/lib/: dockers_phoenix.ex
test_apps/dockers_phoenix/lib/dockers_phoenix/: endpoint.ex  repo.ex
test_apps/dockers_phoenix/priv/repo/: seeds.exs
test_apps/dockers_phoenix/test/: test_helper.exs
test_apps/dockers_phoenix/test/controllers/: page_controller_test.exs
test_apps/dockers_phoenix/test/support/: channel_case.ex  conn_case.ex  model_case.ex
test_apps/dockers_phoenix/test/views/: error_view_test.exs  layout_view_test.exs  page_view_test.exs
test_apps/dockers_phoenix/web/: gettext.ex  router.ex  web.ex
(+8 files in other folders)
